mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-db
  name: mysql-db
  namespace: project1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - image: mysql
        name: mysql
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql-db
  name: mysql-svc
  namespace: project1
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql-db
