phpadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phpmyadmin
  name: phpmyadmin
  namespace: project1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin
        name: phpmyadmin
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: phpmyadmin
  name: phpadmin-svc
  namespace: project1
spec:
  ports:
  - port: 8099
    protocol: TCP
    targetPort: 80
  selector:
    app: phpmyadmin
  type: ClusterIP
