cafe.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cafe

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: cafe
  annotations:
    cert-manager.io/cluster-issuer: cafe-prod

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - cafe.dinextech.com
    secretName: cafe-tls
  rules:
  - host: cafe.dinextech.com
    http:
      paths:
      - pathType: Prefix
        path: /tea
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - pathType: Prefix
        path: /coffee
        backend:
          service:
            name: coffee-svc
            port:
              number: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
  namespace: cafe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
  namespace: cafe
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: coffee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
  namespace: cafe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tea
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
      - name: tea
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  namespace: cafe
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tea
